<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="gms_app_name" translatable="false">MicroG RE</string>
    <string name="dialog_title_remove_account">Remove account</string>
    <string name="dialog_message_remove_account">"Are you sure you want to remove this account?

Some services and functions will be unavailable

Your data will not be lost"</string>
    <string name="dialog_confirm_button">Remove</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="snackbar_remove_account">Account %s removed</string>
    <string name="snackbar_undo_button">Undo</string>
    <string name="limited_services_app_name" translatable="false">MicroG Limited Services</string>
    <string name="gms_settings_name">MicroG Settings</string>
    <string name="gms_settings_summary">Setup MicroG services.</string>
    <string name="just_a_sec">Just a sec…</string>
    <string name="google_account_label" translatable="false">Google</string>
    <string name="ask_permission_tos">By continuing, you allow this app and Google to use your information in accordance with their respective terms of service and privacy policies.</string>
    <string name="ask_scope_permission_title"><xliff:g example="F-Droid">%1$s</xliff:g> would like to:</string>
    <string name="ask_service_permission_title"><xliff:g example="F-Droid">%1$s</xliff:g> would like to use:</string>
    <string name="account_manager_title">Google Account Manager</string>
    <string name="sorry">Sorry…</string>
    <string name="auth_before_connect">Connect Google account with microG.\n\nLet\'s connect to a Google account, use the <b>Sign in</b> button or use the <b>Huawei</b> button if you have a device with this manufacturer. By pressing one of the buttons you will be redirected to the page to login to your account.</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="auth_huawei_button" translatable="false">Huawei</string>
    <string name="auth_connecting">"Your device is establishing a connection to Google’s servers to sign you in.

This can take a few seconds."</string>
    <string name="no_network_error_desc">"You don’t have a network connection.

This could be a temporary problem or your Android device may not be provisioned for data services. Try again when connected to a mobile network, or connect to a Wi-Fi network."</string>
    <string name="auth_general_error_desc">"There was a problem communicating with Google servers.

Try again later."</string>
    <string name="auth_finalize">"Your device is contacting Google to save information to your account.

This can take a couple of minutes."</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="auth_notification_title">Authentication required</string>
    <string name="auth_notification_content"><xliff:g example="F-Droid">%1$s</xliff:g> requires your authorization to access your Google account.</string>
    <string name="auth_package_override_request_title">Allow <b><xliff:g example="F-Droid">%1$s</xliff:g></b> privileged access to <xliff:g example="account@example.com">%2$s</xliff:g>?</string>
    <string name="auth_package_override_request_message"><b><xliff:g example="F-Droid">%1$s</xliff:g></b> wants to access your account as if it was <b><xliff:g example="F-Droid">%2$s</xliff:g> by <xliff:g example="F-Droid Inc.">%3$s</xliff:g></b>. This might grant it privileged access to your account.</string>
    <string name="auth_action_notification_channel_name">Google account alerts</string>
    <string name="auth_action_notification_channel_description">Notifies when one of your Google accounts requires additional setup before it can be used or when an account is incompatible with microG.</string>
    <string name="auth_action_notification_title">Account action required</string>
    <string name="auth_action_notification_content">Your Google account needs additional setup.</string>
    <string name="auth_action_reauth_notification_title">Account action required</string>
    <string name="auth_action_activity_header">Finish setting up your Google account</string>
    <string name="auth_action_activity_explanation">Complete the following steps to be able to use your Google account %s on this device.</string>
    <string name="auth_action_step_enable_checkin">Enable device registration</string>
    <string name="auth_action_step_enable_checkin_description">"Your device needs to register to Google at least once.

You can disable Google device registration after account setup is complete."</string>
    <string name="auth_action_step_enable_gcm">Enable Cloud Messaging</string>
    <string name="auth_action_step_enable_gcm_description">You can disable Cloud Messaging after account setup is complete.</string>
    <string name="auth_action_step_allow_microg_gcm">Allow Cloud Messaging for microG</string>
    <string name="auth_action_step_allow_microg_gcm_description">According to your preferences, microG needs permission from you before it can register itself for Cloud Messaging.</string>
    <string name="auth_action_step_enable_lockscreen">Configure secure screen lock</string>
    <string name="auth_action_step_enable_lockscreen_description">"Your Google account is managed by your workplace or educational institution. Your administrator decided that devices need a secure screen lock before they can access account data.

Please set up a password, PIN, or pattern lock screen."</string>
    <string name="auth_action_step_perform_content_description">Click to perform step</string>
    <string name="auth_action_step_completed_content_description">Step completed</string>
    <string name="auth_action_activity_finish">Finish</string>
    <string name="signin_picker_title">Choose an account</string>
    <string name="signin_picker_subtitle">to continue to <xliff:g example="F-Droid">%1$s</xliff:g></string>
    <string name="signin_picker_add_account_label">Add another account</string>
    <string name="signin_confirm_title">Allow to sign you in to <xliff:g example="F-Droid">%1$s</xliff:g></string>
    <string name="signin_confirm_button_text">Allow and share</string>
    <string name="signin_subtext_sharing">To continue, microG will share name, email address and profile picture of your Google Account with <xliff:g example="F-Droid">%1$s</xliff:g>.</string>
    <string name="signin_subtext_policy" translatable="false">Before using this app, review its %1$s and %2$s.</string>
    <string name="signin_subtext_policy_privacy" translatable="false">privacy policy</string>
    <string name="signin_subtext_policy_terms" translatable="false">terms of service</string>
    <string name="perm_status_broadcast_label">listen to internal status broadcasts</string>
    <string name="perm_gsf_read_gservices_label">read Google service configuration</string>
    <string name="perm_c2dm_receive_label">listen to C2DM messages</string>
    <string name="perm_c2dm_send_label">send C2DM messages to other apps</string>
    <string name="perm_gtalk_svc_label">exchange messages and receive sync notifications from Google servers</string>
    <string name="perm_extended_access_label">Extended access to Google services</string>
    <string name="perm_provision_label">provision microG services</string>
    <string name="perm_provision_description">Allows the app to configure microG services without user interaction</string>
    <string name="perm_car_speed_label">Car speed</string>
    <string name="perm_car_speed_description">"Access your car's speed"</string>
    <string name="perm_car_info_label">Car information</string>
    <string name="perm_car_info_description">"Access your car's information"</string>
    <string name="perm_car_fuel_label">Car fuel level</string>
    <string name="perm_car_fuel_description">"Access your car's fuel level information"</string>
    <string name="perm_car_mileage_label">Car mileage</string>
    <string name="perm_car_mileage_description">"Access your car's mileage information"</string>
    <string name="perm_car_vendor_extension_label">Car vendor channel</string>
    <string name="perm_car_vendor_extension_description">"Access your car's vendor channel to exchange car-specific information"</string>
    <string name="service_name_checkin">Device Registration</string>
    <string name="service_name_mcs">Cloud Messaging</string>
    <string name="service_name_snet" translatable="false">Google SafetyNet</string>
    <string name="service_name_device_attestation">Device Attestation</string>
    <string name="service_name_vending">Play Store services</string>
    <string name="service_name_work_profile">Work profile</string>
    <string name="games_title">Google Play Games</string>
    <string name="games_info_title"><xliff:g example="F-Droid">%1$s</xliff:g> would like to use Play Games</string>
    <string name="games_info_content">To use Play Games it is required to install the Google Play Games app. The application might continue without Play Games, but it is possible that it will behave unexpectedly.</string>
    <string name="pick_place_title">Pick a place</string>
    <string name="pick_place_desc" translatable="false">Place picker is not yet available.</string>
    <string name="place_picker_select_title">Select this location</string>
    <string name="place_picker_nearby_places">Nearby places</string>
    <string name="place_picker_location_lat_lng" translatable="false">(%1$.7f, %2$.7f)</string>
    <string name="lacking_permission_toast" translatable="false">microG Services: Lacking permission to <xliff:g example="have full network acccess">%1$s</xliff:g></string>
    <string name="network_type_mobile">Mobile network</string>
    <string name="network_type_wifi">Wi-Fi</string>
    <string name="network_type_roaming">Roaming</string>
    <string name="network_type_other">Other networks</string>
    <string name="self_check_cat_fake_sig">Signature spoofing support</string>
    <string name="self_check_cat_gms_packages">Installed packages</string>
    <string name="self_check_cat_system">System</string>
    <string name="self_check_name_fake_sig_perm" translatable="false">System has signature spoofing support: </string>
    <string name="self_check_resolution_fake_sig_perm" translatable="false">Your ROM has no native support for signature spoofing. You can still use Xposed or other systems to spoof signature. Please check the documentation on which ROMs do support signature spoofing and how to use microG on ROMs that do not.</string>
    <string name="self_check_name_perm_granted" translatable="false">System grants signature spoofing permission: </string>
    <string name="self_check_resolution_perm_granted" translatable="false">This is a strong indicator that the ROM does support signature spoofing, but requires further action to activate it. Please check the documentation on which steps might be required.</string>
    <string name="self_check_name_system_spoofs">System spoofs signature: </string>
    <string name="self_check_resolution_system_spoofs">Please check the documentation on which steps might be required.</string>
    <string name="self_check_pkg_gms">microG Services</string>
    <string name="self_check_pkg_vending">microG Companion / Play Store</string>
    <string name="self_check_pkg_gsf">microG Services Framework</string>
    <string name="self_check_name_app_installed"><xliff:g example="F-Droid">%1$s</xliff:g> installed: </string>
    <string name="self_check_resolution_app_installed">Install the application <xliff:g example="F-Droid">%1$s</xliff:g> or a compatible one. Please check the documentation on which applications are compatible.</string>
    <string name="update_include_prerelease">Include dev builds</string>
    <string name="update_available_title">Update available</string>
    <string name="update_now">Update</string>
    <string name="update_whats_new">What\'s new</string>
    <string name="update_ignore">Ignore</string>
</resources>